@@ -101,7 +101,7 @@ enum store_types
 
 void pl3_playlist_search();
 
-
+void pl3_playlist_changed();
 
 
 
